Upgrade to jtreesitter 0.26.0 and tree-sitter-cli 0.26.5 for out-of-process LSP
The LSP server now runs out-of-process with its own JRE (Java 24), enabling
the use of latest jtreesitter which requires FFM API (Java 22+).

Version upgrades:
- jtreesitter: 0.24.1 → 0.26.0 (stable QueryCursor API)
- tree-sitter-cli: 0.24.3 → 0.26.5 (latest parser generator)
- lsp4j: 0.21.1 → 0.24.0 (LSP 3.18 protocol support)

Build changes:
- lsp-server: Use org.xtclang.kotlin.jdk (24) instead of intellij-jdk (21)
- lsp-server: Bundle LSP4J/SLF4J/Logback in fat JAR for out-of-process execution
- tree-sitter: Remove palantir plugin, use providers.exec for git hash
- tree-sitter: Add measureNanoTime for Zig compilation timing
- tree-sitter: Fix config-cache issues (defer provider .get() calls)

Native libraries rebuilt for all 5 platforms with tree-sitter-cli 0.26.5.

See lang/doc/plans/PLAN_OUT_OF_PROCESS_LSP.md for architecture details.